--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      window.global = window;
+    </script>
     <script src="/lib/CCapture.all.min.js"></script>
+    <script src="https://unpkg.com/whammy/whammy.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="/lib/CCapture.all.min.js"></script>
+
+
   </body>
 </html>
